[gd_scene load_steps=16 format=3 uid="uid://cf6ynff73k666"]

[ext_resource type="Script" path="res://main.gd" id="1_teuwr"]
[ext_resource type="PackedScene" uid="uid://dxiabom1fry4a" path="res://player.tscn" id="1_v71kt"]
[ext_resource type="PackedScene" uid="uid://hnilseqmro2f" path="res://mob.tscn" id="2_pkd7r"]
[ext_resource type="PackedScene" uid="uid://iqgg37akujup" path="res://mob_2.tscn" id="3_duhur"]
[ext_resource type="PackedScene" uid="uid://cvy47wcuthmcf" path="res://mob_4.tscn" id="3_tsr44"]
[ext_resource type="PackedScene" uid="uid://c1tcfnli7nq87" path="res://mob_3.tscn" id="4_c0qk0"]
[ext_resource type="PackedScene" uid="uid://cye0s46cc8x5p" path="res://hud.tscn" id="4_eq05k"]
[ext_resource type="AudioStream" uid="uid://cfvn2wxhhw5qr" path="res://assets/SFX_Music/DTK_GameOver_SFX.wav" id="7_gf1d4"]
[ext_resource type="PackedScene" uid="uid://l2drlav3wnp2" path="res://power_up_clear_enemy.tscn" id="7_jrqqu"]
[ext_resource type="PackedScene" uid="uid://bxejwk81bmim2" path="res://pause_menu.tscn" id="7_yav6b"]
[ext_resource type="AudioStream" uid="uid://2bbih2hbwec4" path="res://assets/SFX_Music/DTK_Background_Music.ogg" id="8_38n0k"]
[ext_resource type="AudioStream" uid="uid://yuw0weotcff" path="res://assets/SFX_Music/countdown_Sound.wav" id="8_lo7sn"]

[sub_resource type="Gradient" id="Gradient_ec4r3"]
colors = PackedColorArray(0.511719, 0.609375, 0.65625, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3o8t1"]
gradient = SubResource("Gradient_ec4r3")
fill = 1
fill_from = Vector2(0.504274, 0.512821)
fill_to = Vector2(0.931624, 0.0512821)

[sub_resource type="Curve2D" id="Curve2D_3ci0y"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -8, 0, 0, 0, 0, 480, -8, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, -8)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_teuwr")
mob_scene = Array[PackedScene]([ExtResource("2_pkd7r"), ExtResource("3_duhur"), ExtResource("4_c0qk0"), ExtResource("3_tsr44")])
powerup_scene = Array[PackedScene]([ExtResource("7_jrqqu")])

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_3o8t1")

[node name="PowerUp_Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 20.0

[node name="MobTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="StartTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(240, 450)

[node name="Player" parent="." instance=ExtResource("1_v71kt")]
unique_name_in_owner = true

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_3ci0y")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
unique_name_in_owner = true
position = Vector2(0, -8)

[node name="HUD" parent="." instance=ExtResource("4_eq05k")]
unique_name_in_owner = true

[node name="PauseMenu" parent="." instance=ExtResource("7_yav6b")]
unique_name_in_owner = true
process_mode = 3
visible = false

[node name="GameOverMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_gf1d4")
pitch_scale = 0.7

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_38n0k")
volume_db = -12.905

[node name="Resume_CountDownMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_lo7sn")

[connection signal="timeout" from="PowerUp_Timer" to="." method="_on_power_up_timer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="bmusic" from="PauseMenu" to="." method="_on_pause_menu_bmusic"]
[connection signal="brestart" from="PauseMenu" to="." method="new_game"]
[connection signal="bresume" from="PauseMenu" to="." method="_on_pause_menu_bresume"]
